# mental-ts

./: .gitignore  README.md  build.js  mntconfig.json  package-lock.json  package.json  setup.ps1  setup.sh  tsconfig.json
custom/: CMakeLists.txt  library.cpp
mental-types/: index.d.ts  package.json
server/: server.js
src/: cube.ts  custom.d.ts  empty.scene  entity.ts  gameoflife.gls  index.ts  matrix.ts  mental.d.ts  model.gls  screen.gls  test.json  test.scene
